모바일웹 수정, pc버전 레이어팝업 수정 업로드

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -906,6 +906,19 @@ button {
 }
 
 /* lecTable : 공통 */
+.lecAllChk {
+    margin: 20px;
+}
+.lecAllChk input[type="checkbox"] {
+    float: left;
+    width: 20px;
+    height: 20px;
+}
+.lecAllChk label {
+    font-size: 16px;
+    line-height: 24px;
+    margin-left: 15px
+}
 .lecTable .w-tit {
     font-size: 14px;
     color: #323232;
