--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -7046,9 +7046,9 @@ table.PassZoneTable .w-data {
 }
 .willbes-Layer-PassBox .passzoneTitInfo {
     background: #f9f9f9;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 600;
-    padding: 15px 10px;
+    padding: 20px 10px;
     margin-bottom: 20px;
     letter-spacing: 0;
 }
@@ -7069,11 +7069,19 @@ table.PassZoneTable .w-data {
     padding-left: 10px;
 }
 .willbes-Layer-PassBox .passzoneSubInfo {
-    margin-bottom: 35px;
+    margin-bottom: 25px;
     letter-spacing: 0;
+    border-bottom: 1px solid #959595;
+    padding-bottom: 10px;
 }
 .willbes-Layer-PassBox .passzoneSubInfo li {
     line-height: 23px;
+}
+.willbes-Layer-PassBox .passzoneSubInfo li.tit {
+    line-height: 12px;
+    border-bottom: 1px solid #959595;
+    margin-bottom: 10px;
+    padding-bottom: 15px;
 }
 .willbes-Layer-PassBox .passzoneSubInfo li.txt {
     padding-left: 10px;
@@ -7083,7 +7091,6 @@ table.PassZoneTable .w-data {
     line-height: 26px;
 }
 .willbes-Layer-PassBox .passzonefinInfo div {
-    font-size: 16px;
     margin: 40px 0;
 }
 .willbes-Layer-PassBox .emailBox {
@@ -7598,14 +7605,18 @@ table.testTable tr td.w-btn a {
     color: #fff;
     text-align: center;
 }
+table.testTable tr td.w-date {
+    line-height: 16px;
+    padding: 12px 0;
+}
 
 /* subContainer : Mypage : 모의고사관리 : usertestTable */
 .LeclistTable .usertestTable tr th {
-    line-height: 50px;
+    line-height: 40px;
 }
 .LeclistTable .usertestTable tr td {
     line-height: 20px;
-    padding: 10px 0;
+    padding: 12px 0;
 }
 .LeclistTable .usertestTable tr td span {
     vertical-align: baseline;
@@ -7666,6 +7677,10 @@ table.testTable tr td.w-btn a {
 }
 .ExamBox .examSjBx li .exam-temp {
     background: url("../../img/willbes/mypage/icon_round_blue.png") no-repeat center center;
+    padding: 8px 9px;
+}
+.ExamBox .examSjBx li .exam-fin {
+    background: url("../../img/willbes/mypage/icon_round_red.png") no-repeat center center;
     padding: 8px 9px;
 }
 .ExamBox .examSjBx li .exam-ing {
@@ -7943,8 +7958,10 @@ table.testTable tr td.w-btn a {
 }
 .ExamBox .exam-paperList.mgB3 li .agR {
     margin-top: 5px;
+    margin-right: 10px;
 }
 .ExamBox .exam-paperList.mgB3 li .agR textarea {
+    float: right;
     display: none;
     width: 395px;
     height: 50px;
@@ -8879,12 +8896,127 @@ table.acadlecInfoPackageTable tr.Top td {
     margin: -3px 0 0 10px;
 }
 
+/* Video Player */
+.videoPopup .view {
+    float: left;
+    background: #000;
+    width: 71%;
+    height: 394px;
+    text-indent: -9999px;
+}
+
+.vodTabs {
+    float: left;
+    background: #1c1c1c;
+    width: 29%;
+    height: 394px;
+}
+.vodTabs .vodWrap {
+    height: 41px;
+    border-bottom: 1px solid #0e79af;
+}
+.vodTabs .vodWrap li {
+    float: left;
+    width: 50%;
+    height: 40px;
+}
+.vodTabs .vodWrap li a {
+    display: block;
+    background: #1c1c1c;
+    width: 100%;
+    height: 100%;
+    font-size: 13px;
+    font-weight: 600;
+    color: #b8b8b8;
+    text-align: center;
+    line-height: 40px;
+    border: none;
+}
+.vodTabs .vodWrap li a.on {
+    background: #0e79af;
+    color: #fff;
+    border: none;
+}
 
 
+.vodTabs .vodBox {}
+.vodTabs .vodBox .tabContent {}
 
 
+.vodTabs .vodBox .info {}
+.vodTabs .vodBox .list {}
 
+.vodTabs .vodBox .w-data {
+    padding: 10px 15px;
+}
+.vodTabs .vodBox .w-data .w-subtit {
+    font-size: 12px;
+    color: #606060;
+    margin-bottom: 5px;
+}
+.vodTabs .vodBox .w-data .w-subtit .row-line {
+    background: #606060;
+    width: 1px;
+    height: 7px;
+    margin: -2px 5px 0;
+}
+.vodTabs .vodBox .w-data .w-tit {
+    font-size: 14px;
+    color: #fff;
+    line-height: 24px;
+    margin-bottom: 10px;
+}
 
+.vodTabs .vodBox .w-data .w-info li {
+    font-size: 12px;
+    color: #6b6b6b;
+    line-height: 20px;
+}
+.vodTabs .vodBox .w-data .w-info .row-line {
+    background: #6b6b6b;
+    width: 1px;
+    height: 9px;
+    margin: 0 5px;
+}
+
+.vodTopTable {}
+.vodTopTable tr th:first-child {
+    border-left: 0;
+}
+.vodTopTable tr th {
+    background: #131313;
+    height: 30px;
+    color: #5e5e5e;
+    border-left: 1px solid #2b2b2b;
+}
+.vodTable {
+    display: block;
+    height: 168px;
+    overflow-x: auto;
+}
+.vodTable tr {
+    background: #1c1c1c;
+}
+.vodTable tr.nth {
+    background: #212121;
+}
+.vodTable tr td:first-child {
+    border-left: 0;
+}
+.vodTable tr td {
+    color: #fff;
+    text-align: center;
+    border-left: 1px solid #2b2b2b;
+}
+.vodTable tr td.w-tit {
+    width: 95%;
+    display: inline-block;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    line-height: 30px;
+    padding-left: 5%;
+}
 
 
 
