플레이어 작업 페이지 추가업로드

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -9070,7 +9070,7 @@ table.acadlecInfoPackageTable tr.Top td {
 }
 .cartBtn ul li {
     float: left;
-    width: 64px;
+    min-width: 64px;
     height: 25px;
     border: 1px solid #121212;
     margin-left: 5px;
