--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -730,6 +730,9 @@ select[disabled] {
 .pb20 {
   padding-bottom: 20px !important;
 }
+.pb30 {
+  padding-bottom: 30px !important;
+}
 .pb40 {
   padding-bottom: 40px !important;
 }
