--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -61,6 +61,9 @@ body {
 .width45p {
     width: 45%;
 }
+.width49p {
+    width: 49%;
+}
 .width50p {
     width: 50%;
 }
@@ -794,11 +797,15 @@ span {
 }
 
 /* Footer */
+#Footer {
+    background: #ececec;
+    border-top: 1px solid #ccc;
+}
 #Footer .ft-Link {
     font-size: 12px;
-    color: #666;
+    color: #333;
     text-align: center;
-    padding: 40px 0;
+    padding: 20px 0;
 }
 #Footer .ft-Link ul li {
     display: inline-block;
@@ -806,7 +813,7 @@ span {
 }
 #Footer address {
     font-size: 12px;
-    color: #707070;
+    color: #333;
     text-align: center;
     line-height: 16px;
 }
@@ -814,6 +821,12 @@ span {
 
 
 /*********************************************     CONTAINER PAGE     *********************************************/
+.Container:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
 /* Tit : 공통 */
 .willbes-Tit {
     font-size: 16px;
@@ -915,15 +928,18 @@ span {
     height: 40px;
 }
 .willbes-Lec-Selected .chkBox {
+    position: absolute;
+    top: 20px;
+    right:20px;
     float: right;
     font-size: 14px;
     text-align: right;
-    line-height: 45px;
+    line-height: 40px;
 }
 .willbes-Lec-Selected .chkBox input[type="checkbox"] {
     width: 20px;
     height: 20px;
-    margin: 12px 4px 12px 0;
+    margin: 10px 4px 10px 0;
 }
 .willbes-Lec-Selected .chkBox span {
     float: right;
@@ -1071,7 +1087,8 @@ span {
 }
 .lecTable .w-file {
     font-size: 14px;
-    line-height: 40px;
+    line-height: 30px;
+    padding: 10px 0;
 }
 .lecTable .w-file a {
     display: block;
@@ -1429,7 +1446,7 @@ span {
 .willbes-Lec-Search button.search-Btn {
     background: url("../../../img/willbes/m/main/icon_search_btn.png") no-repeat 0 0;
     width: 51px;
-    height: 43px;
+    height: 38px;
     border: none;
     position: absolute;
     top: 1px;
@@ -1444,9 +1461,7 @@ span {
 .willbes-User-Tablet {
     float: left;
     width: 100%;
-    padding: 40px 20px 20px;  
-    margin-top: 20px;
-    border-top: 1px solid #ccc;  
+    padding: 20px;  
 }
 .willbes-User-Tablet dl {
     text-align: center;
@@ -1501,7 +1516,7 @@ span {
 }
 .willbes-Open-Table .MoreBtn {
     width: 50%;
-    height: 40px;
+    height: 34px;
 }
 .willbes-Open-Table .MoreBtn a {
     display: block;
@@ -1511,7 +1526,7 @@ span {
     color: #9a9a9a;
 }
 .willbes-Open-Table .MoreBtn a img {
-    margin: -4px 0;
+    width: 34px;
 }
 
 /* 시작일변경 */
@@ -1533,13 +1548,15 @@ span {
 }
 .replyList.willbes-Open-Table .MoreBtn {
     background: url("../../../img/willbes/m/mypage/icon_arrow_on.png") no-repeat center center;
-    width: 46px;
-    height: 46px;   
+    background-size: 34px;
+    width: 40px;
+    height: 40px;   
     padding-right: 0;
     text-indent: -9999px;
 } 
 .replyList.willbes-Open-Table.hover .MoreBtn {
     background: url("../../../img/willbes/m/mypage/icon_arrow_off.png") no-repeat center center;
+    background-size: 34px;
 } 
 .willbes-Open-List {
     display: none;
@@ -1550,19 +1567,19 @@ span {
     clear: both;
     display: inline-block;
     width: 100%;
-    height: 45px;
+    height: 40px;
 }
 .filetype .file-text {
     background: #fff;
     float: left;
     position: relative;
     width: 74%;
-    height: 45px;
+    height: 40px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
     margin: 0;
-    line-height: 45px;
+    line-height: 40px;
     z-index: 3;
 }
 .filetype .file-select {
@@ -1570,7 +1587,7 @@ span {
     top: 0;
     left: 0;
     width: 100%;
-    height: 45px;
+    height: 40px;
     overflow: hidden;
 }
 .filetype .file-select .input-file {
@@ -1582,11 +1599,11 @@ span {
 .filetype .file-btn {
     display: inline-block;
     background: #4f4f4f;
-    height: 45px;
+    height: 40px;
     font-size: 14px;
     color: #fff;
     text-align: center;
-    line-height: 45px;
+    line-height: 40px;
     cursor: pointer;
 }
 
@@ -1597,14 +1614,29 @@ span {
 
 
 /* iPhone 5/SE */
-@media only screen and (max-width: 320px) {
+@media only screen and (min-width: 320px) {
+    .width25p {
+        width: 22%;
+    }
     .width45p {
         width: 40%;
+    }
+    .width90p {
+        width: 89%;
+    }
+    .willbes-Lec-Selected .chkBox {
+        right: 5%;
+    }
+    #Footer .ft-Link ul li {
+        margin: 0 1%;
     }
 }
 
 /* iPhone 6/7/8 */
-@media only screen and (max-width: 375px) {
+@media only screen and (min-width: 375px) {
+    .width25p {
+        width: 24%;
+    }
     .width45p {
         width: 44%;
     }
